# Simple-DeFi-Validator-Demo

./: plinth-template.cabal
app/: Main.hs
