cabal-version:       3.0
name:                simple-defi
version:             0.1.0.0
build-type:          Simple

executable simple-defi
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base >=4.14 && <5,
      bytestring,
      containers,
      plutus-core >=1.54.0.0 && <1.55,
      plutus-ledger-api >=1.54.0.0 && <1.55,
      plutus-tx >=1.54.0.0 && <1.55,
      plutus-tx-plugin >=1.54.0.0 && <1.55
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
